# pong

./: Cargo.toml  Embed.toml
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/src/: buttons_setup.rs  main.rs  serial_setup.rs
http-pong/: Cargo.toml
http-pong/public/: index.html
http-pong/src/: main.rs  mblistener.rs
src/: buttons_setup.rs  main.rs
wasm-pong/: Cargo.toml  build.sh
wasm-pong/src/: ball.rs  bounding_box.rs  game_state.rs  keyboard.rs  lib.rs  microbit_state.rs  paddle.rs  screen.rs  vec2.rs
