[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[dependencies]
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
nb = "1.1.0"
heapless = "0.8.0"
# lsm303agr = "1.1.0"
# embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
serde-json-core = "0.6.0"
serde = { version = "1.0.219", default-features = false }
