[package]
name = "wasm-pong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
futures = "0.3.31"
gloo = "0.11.0"
log = "0.4.26"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'KeyboardEvent',
    'WebSocket',
]
